Change sidebar background color to #E1B382

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
 /* Sidebar */
 .sidebar {
   width: 220px;
-  background-color: #16ac44;
+  background-color: #E1B382;
   padding: 20px;
 }
 
