--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body {
   padding: 30px;
   text-decoration: none;
   color: #333;
+  width: 150px;
+  height: 100px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
